docs: explain the portable Hegel workflow